add performance detail (in progress...)